hmi 로직 전체 수정 및 API 테스트 완료